--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
       before_deploy:
         - echo $DOCKER_PASSWORD | docker login harbor.revelry-prod.revelry.net -u $DOCKER_USERNAME --password-stdin
       deploy:
+        skip_cleanup: true
         provider: script
         script: bin/docker_pub library/wiki harbor.revelry-prod.revelry.net
         on:
